# EchoesOfTheForgottenRealm

./: .gitignore  CMakeLists.txt  README.md
assets/config/: game.cfg
assets/levels/: level1.txt  level2.txt  level3.txt
src/: Animation.cpp  Animation.h  Archer.cpp  Archer.h  AudioManager.cpp  AudioManager.h  Config.cpp  Config.h  Constants.h  Enemy.cpp  Enemy.h  Game.cpp  Game.h  GameObject.h  Pickups.cpp  Pickups.h  Player.cpp  Player.h  Projectile.cpp  Projectile.h  Skeleton.cpp  Skeleton.h  Slime.cpp  Slime.h  TextureManager.cpp  TextureManager.h  TileMap.cpp  TileMap.h
tools/: gen_audio.py  gen_extra.py  gen_levels.py  gen_menu.py  gen_textures.py  gen_wallpaper.py  import_npc_enemies.py  import_player.py  import_tiles.py  strip_comments.py
